增加配置网站： 飘天文学

--- a/configs/BookSiteConfigs.json
+++ b/configs/BookSiteConfigs.json
@@ -229,4 +229,25 @@
 "updateDiv":"#info > p:nth-child(5) > a",
 "type":"customize",
 "post":"0",
+"patch":""},
+{
+"id":18,
+"name":"飘天文学",
+"address":"http://www.piaotian.net",
+"url_reg":"^http://www.piaotian.net/html/\\d+/\\d+/\\d+.html$",
+"content_selector":"#content",
+"navigation_selector":"a:contains('返回目录')",
+"navigation_selector_pre":"a:contains('上一章')",
+"navigation_selector_next":"a:contains('下一章')",
+"title_reg":"(.*?) (.*)",
+"title_location":"0",
+"content_patch":"fakeStub.find('title').html(fakeStub.find('h1').text().replace(' 正文',
+''));fakeStub.find('#content').find('h1').remove();fakeStub.find('#content').find('div').remove();fakeStub.find('#content').find('table').remove();fakeStub.find('#content').html(fakeStub.find('#content').html().replace(/\\(未完待续。\\).*/,
+''));",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"INDEX",
+"updateDiv":".centent a:last",
+"type":"customize",
+"post":"1",
 "patch":""}]
