--- a/configs/BookSiteConfigs.json
+++ b/configs/BookSiteConfigs.json
@@ -1,42 +1,4 @@
 ﻿[{
-"id":1,
-"name":"内置站点占位符OFFICIAL",
-"address":"",
-"url_reg":"",
-"content_selector":"",
-"navigation_selector":"",
-"navigation_selector_pre":"",
-"navigation_selector_next":"",
-"title_reg":"",
-"title_location":"",
-"content_patch":"",
-"update_patch":"",
-"enable":"true",
-"updateInfoPage":"",
-"updateDiv":"",
-"type":"official",
-"post":"",
-"patch":""},
-{
-"id":2,
-"name":"内置站点占位符CUSTOMIZE",
-"address":"",
-"url_reg":"",
-"content_selector":"",
-"navigation_selector":"",
-"navigation_selector_pre":"",
-"navigation_selector_next":"",
-"title_reg":"",
-"title_location":"",
-"content_patch":"",
-"update_patch":"",
-"enable":"true",
-"updateInfoPage":"",
-"updateDiv":"",
-"type":"customize",
-"post":"",
-"patch":""},
-{
 "id":5,
 "name":"吾读网",
 "address":"http://www.66721.com",
@@ -75,7 +37,45 @@
 "post":"0",
 "patch":""},
 {
-"id":10,
+"id":7,
+"name":"内置站点占位符OFFICIAL",
+"address":"",
+"url_reg":"",
+"content_selector":"",
+"navigation_selector":"",
+"navigation_selector_pre":"",
+"navigation_selector_next":"",
+"title_reg":"",
+"title_location":"",
+"content_patch":"",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"",
+"updateDiv":"",
+"type":"official",
+"post":"",
+"patch":""},
+{
+"id":8,
+"name":"内置站点占位符CUSTOMIZE",
+"address":"",
+"url_reg":"",
+"content_selector":"",
+"navigation_selector":"",
+"navigation_selector_pre":"",
+"navigation_selector_next":"",
+"title_reg":"",
+"title_location":"",
+"content_patch":"",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"",
+"updateDiv":"",
+"type":"customize",
+"post":"",
+"patch":""},
+{
+"id":9,
 "name":"POPO原创市集",
 "address":"http://www.popo.tw",
 "url_reg":"http://www.popo.tw/books/\\d+/\\S+/\\d+",
@@ -95,7 +95,7 @@
 "post":"0",
 "patch":""},
 {
-"id":11,
+"id":10,
 "name":"派小说",
 "address":"http://paitxt.com",
 "url_reg":"^http://paitxt.com/\\d+/\\d+/\\d+.html$",
@@ -115,7 +115,7 @@
 "post":"0",
 "patch":""},
 {
-"id":12,
+"id":11,
 "name":"人人小说",
 "address":"http://www.ppxs.net",
 "url_reg":"^http://www.ppxs.net/\\d+/\\d+/\\d+.html$",
@@ -134,7 +134,7 @@
 "post":"0",
 "patch":""},
 {
-"id":13,
+"id":12,
 "name":"小说2016",
 "address":"http://www.xiaoshuo2016.com",
 "url_reg":"^http://www.xiaoshuo2016.com/files/article/html/\\d+/\\d+/\\d+.html$",
@@ -153,7 +153,7 @@
 "post":"0",
 "patch":""},
 {
-"id":14,
+"id":13,
 "name":"顶点小说",
 "address":"http://www.23wx.la",
 "url_reg":"^http://www.23wx.la/xs/\\d/\\d+/\\d+.html$",
@@ -172,7 +172,7 @@
 "post":"0",
 "patch":""},
 {
-"id":15,
+"id":14,
 "name":"看书堂",
 "address":"http://www.kanshutang.net",
 "url_reg":"^http://www.kanshutang.net/files/article/html/\\d+/\\d+/\\d+.html$",
@@ -191,7 +191,7 @@
 "post":"0",
 "patch":""},
 {
-"id":16,
+"id":15,
 "name":"零点看书",
 "address":"http://www.00ksw.com",
 "url_reg":"^http://www.00ksw.com/html/\\d+/\\d+/\\d+.html$",
@@ -211,7 +211,7 @@
 "post":"0",
 "patch":""},
 {
-"id":17,
+"id":16,
 "name":"新笔趣阁",
 "address":"http://www.ltoooo.com",
 "url_reg":"^http://www.ltoooo.com/\\S+/\\d+.html$",
@@ -231,7 +231,7 @@
 "post":"0",
 "patch":""},
 {
-"id":18,
+"id":17,
 "name":"飘天文学",
 "address":"http://www.piaotian.net",
 "url_reg":"^http://www.piaotian.net/html/\\d+/\\d+/\\d+.html$",
@@ -250,4 +250,23 @@
 "updateDiv":".centent a:last",
 "type":"customize",
 "post":"1",
+"patch":""},
+{
+"id":18,
+"name":"思路客小说阅读网",
+"address":"http://www.silukee.com",
+"url_reg":"^http://www.silukee.com/\\S+/\\d+.html$",
+"content_selector":"#contText",
+"navigation_selector":"a:contains('返回目录')",
+"navigation_selector_pre":"a:contains('上一章')",
+"navigation_selector_next":"a:contains('下一章')",
+"title_reg":"(.*)-(.*)",
+"title_location":"1",
+"content_patch":"fakeStub.find('.cont').append('<div id=\\\"contText\\\"></div>');fakeStub.find('#contText').html(fakeStub.find('.cont').html());fakeStub.find('#contText > div').remove();",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"INDEX",
+"updateDiv":".booklist a:last",
+"type":"customize",
+"post":"0",
 "patch":""}]
