新增站点配置：大文学、17k小说网

--- a/configs/BookSiteConfigs.json
+++ b/configs/BookSiteConfigs.json
@@ -1,43 +1,5 @@
 ﻿[{
-"id":5,
-"name":"吾读网",
-"address":"http://www.66721.com",
-"url_reg":"",
-"content_selector":"",
-"navigation_selector":"",
-"navigation_selector_pre":"",
-"navigation_selector_next":"",
-"title_reg":"",
-"title_location":"0",
-"content_patch":"",
-"update_patch":"",
-"enable":"true",
-"updateInfoPage":"",
-"updateDiv":"",
-"type":"customize",
-"post":"0",
-"patch":""},
-{
-"id":6,
-"name":"吾读网",
-"address":"",
-"url_reg":"",
-"content_selector":"",
-"navigation_selector":"",
-"navigation_selector_pre":"",
-"navigation_selector_next":"",
-"title_reg":"",
-"title_location":"0",
-"content_patch":"",
-"update_patch":"",
-"enable":"true",
-"updateInfoPage":"",
-"updateDiv":"",
-"type":"customize",
-"post":"0",
-"patch":""},
-{
-"id":7,
+"id":1,
 "name":"内置站点占位符OFFICIAL",
 "address":"",
 "url_reg":"",
@@ -56,7 +18,7 @@
 "post":"",
 "patch":""},
 {
-"id":8,
+"id":2,
 "name":"内置站点占位符CUSTOMIZE",
 "address":"",
 "url_reg":"",
@@ -75,7 +37,7 @@
 "post":"",
 "patch":""},
 {
-"id":9,
+"id":3,
 "name":"POPO原创市集",
 "address":"http://www.popo.tw",
 "url_reg":"http://www.popo.tw/books/\\d+/\\S+/\\d+",
@@ -95,7 +57,7 @@
 "post":"0",
 "patch":""},
 {
-"id":10,
+"id":4,
 "name":"派小说",
 "address":"http://paitxt.com",
 "url_reg":"^http://paitxt.com/\\d+/\\d+/\\d+.html$",
@@ -115,7 +77,7 @@
 "post":"0",
 "patch":""},
 {
-"id":11,
+"id":5,
 "name":"人人小说",
 "address":"http://www.ppxs.net",
 "url_reg":"^http://www.ppxs.net/\\d+/\\d+/\\d+.html$",
@@ -134,7 +96,7 @@
 "post":"0",
 "patch":""},
 {
-"id":12,
+"id":6,
 "name":"小说2016",
 "address":"http://www.xiaoshuo2016.com",
 "url_reg":"^http://www.xiaoshuo2016.com/files/article/html/\\d+/\\d+/\\d+.html$",
@@ -153,7 +115,7 @@
 "post":"0",
 "patch":""},
 {
-"id":13,
+"id":7,
 "name":"顶点小说",
 "address":"http://www.23wx.la",
 "url_reg":"^http://www.23wx.la/xs/\\d/\\d+/\\d+.html$",
@@ -172,7 +134,7 @@
 "post":"0",
 "patch":""},
 {
-"id":14,
+"id":8,
 "name":"看书堂",
 "address":"http://www.kanshutang.net",
 "url_reg":"^http://www.kanshutang.net/files/article/html/\\d+/\\d+/\\d+.html$",
@@ -191,7 +153,7 @@
 "post":"0",
 "patch":""},
 {
-"id":15,
+"id":9,
 "name":"零点看书",
 "address":"http://www.00ksw.com",
 "url_reg":"^http://www.00ksw.com/html/\\d+/\\d+/\\d+.html$",
@@ -211,7 +173,7 @@
 "post":"0",
 "patch":""},
 {
-"id":16,
+"id":10,
 "name":"新笔趣阁",
 "address":"http://www.ltoooo.com",
 "url_reg":"^http://www.ltoooo.com/\\S+/\\d+.html$",
@@ -231,7 +193,7 @@
 "post":"0",
 "patch":""},
 {
-"id":17,
+"id":11,
 "name":"飘天文学",
 "address":"http://www.piaotian.net",
 "url_reg":"^http://www.piaotian.net/html/\\d+/\\d+/\\d+.html$",
@@ -252,7 +214,7 @@
 "post":"1",
 "patch":""},
 {
-"id":18,
+"id":12,
 "name":"思路客小说阅读网",
 "address":"http://www.silukee.com",
 "url_reg":"^http://www.silukee.com/\\S+/\\d+.html$",
@@ -267,6 +229,48 @@
 "enable":"true",
 "updateInfoPage":"INDEX",
 "updateDiv":".booklist a:last",
+"type":"customize",
+"post":"0",
+"patch":""},
+{
+"id":13,
+"name":"大文学",
+"address":"http://www.dawenxue.org",
+"url_reg":"^http://www.dawenxue.org/html/\\d+/\\d+/\\d+.html$",
+"content_selector":"#clickeye_content",
+"navigation_selector":"a:contains('回目录')",
+"navigation_selector_pre":"a:contains('上一页')",
+"navigation_selector_next":"a:contains('下一页')",
+"title_reg":"(.*?)-(.*)-.*",
+"title_location":"0",
+"content_patch":"fakeStub.find('#wrap > div > p:nth-child(1) > a:nth-child(2)').text('回目录');fakeStub.find('#clickeye_content').html(fakeStub.find('#clickeye_content').html().replace(/大文学 www.dawenxue.org/g,
+'').replace('\\(\\)',
+'').replace('亦凡图书馆扫校',
+''));fakeStub.find('#clickeye_content').find('p').remove();",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"INDEX",
+"updateDiv":".table_01 a:last",
+"type":"customize",
+"post":"0",
+"patch":""},
+{
+"id":14,
+"name":"17k小说网",
+"address":"http://www.17k.com",
+"url_reg":"^http://www.17k.com/chapter/\\d+/\\d+.html$",
+"content_selector":"#chapterContentWapper",
+"navigation_selector":"a:contains('返回目录')",
+"navigation_selector_pre":"a:contains('上一章')",
+"navigation_selector_next":"a:contains('下一章')",
+"title_reg":"(.*?)-(.*?)-.*",
+"title_location":"0",
+"content_patch":"fakeStub.find('.qrcode').remove();fakeStub.find('#chapterContentWapper').html(fakeStub.find('#chapterContentWapper').html().replace('本书首发来自17K小说网，第一时间看正版内容！',
+''));",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"INDEX",
+"updateDiv":".Volume a:last",
 "type":"customize",
 "post":"0",
 "patch":""}]
