新增站点配置：小说阅读网

--- a/configs/BookSiteConfigs.json
+++ b/configs/BookSiteConfigs.json
@@ -273,4 +273,23 @@
 "updateDiv":".Volume a:last",
 "type":"customize",
 "post":"0",
+"patch":""},
+{
+"id":15,
+"name":"小说阅读网",
+"address":"http://www.readnovel.com",
+"url_reg":"^http://www.readnovel.com/novel/\\d+/\\d+.html$",
+"content_selector":".zhangjie",
+"navigation_selector":"a:contains('返回目录')",
+"navigation_selector_pre":"a:contains('上一章')",
+"navigation_selector_next":"a:contains('下一章')",
+"title_reg":"《(.*?)》(.*?)-.*",
+"title_location":"0",
+"content_patch":"fakeStub.find('.zhangjie').find('div').remove();",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"INDEX",
+"updateDiv":".ML_ul a:last",
+"type":"customize",
+"post":"0",
 "patch":""}]
