新增站点配置：请看小说网

--- a/configs/BookSiteConfigs.json
+++ b/configs/BookSiteConfigs.json
@@ -292,4 +292,24 @@
 "updateDiv":".ML_ul a:last",
 "type":"customize",
 "post":"0",
+"patch":""},
+{
+"id":16,
+"name":"请看小说网",
+"address":"http://www.qingkan520.com",
+"url_reg":"^http://www.qingkan520.com/book/\\S+/\\d+\\S+.html$",
+"content_selector":"#content",
+"navigation_selector":"a:contains('本书目录')",
+"navigation_selector_pre":"a:contains('上一章')",
+"navigation_selector_next":"a:contains('下一章')",
+"title_reg":"(.*) (.*?) - 请看小说网",
+"title_location":"1",
+"content_patch":"fakeStub.find('a:contains(\\\"下一章\\\")').attr('href',
+fakeStub.find('a:contains(\\\"下一节\\\")').attr('href'));fakeStub.find('#content').find('div').remove();fakeStub.find('#content').find('a').remove();",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"INDEX",
+"updateDiv":".zjbox a:last",
+"type":"customize",
+"post":"0",
 "patch":""}]
