新增站点配置：UU看书

--- a/configs/BookSiteConfigs.json
+++ b/configs/BookSiteConfigs.json
@@ -312,4 +312,24 @@ fakeStub.find('a:contains(\\\"下一节\\\")').attr('href'));fakeStub.find('#con
 "updateDiv":".zjbox a:last",
 "type":"customize",
 "post":"0",
+"patch":""},
+{
+"id":17,
+"name":"UU看书",
+"address":"http://www.uukanshu.com",
+"url_reg":"^http://www.uukanshu.com/b/\\d+/\\d+.html$",
+"content_selector":"#contentbox",
+"navigation_selector":"a:contains('目录')",
+"navigation_selector_pre":"a:contains('上一章')",
+"navigation_selector_next":"a:contains('下一章')",
+"title_reg":"(.*?)-(.*)",
+"title_location":"0",
+"content_patch":"fakeStub.find('title').html(fakeStub.find('.shuming a:first').text() + '-' + fakeStub.find('h1').text());fakeStub.find('#contentbox').find('div').remove();fakeStub.find('#contentbox').html(fakeStub.find('#contentbox').html().replace(/(..看书\\(.*?\\))/,
+''));",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"INDEX",
+"updateDiv":".zuixin a:first",
+"type":"customize",
+"post":"0",
 "patch":""}]
