新增站点配置：uu小说

--- a/configs/BookSiteConfigs.json
+++ b/configs/BookSiteConfigs.json
@@ -332,4 +332,23 @@ fakeStub.find('a:contains(\\\"下一节\\\")').attr('href'));fakeStub.find('#con
 "updateDiv":".zuixin a:first",
 "type":"customize",
 "post":"0",
+"patch":""},
+{
+"id":18,
+"name":"uu小说",
+"address":"http://www.uuxs.net",
+"url_reg":"^http://www.uuxs.net/book/\\d+/\\d+/\\d+.html$",
+"content_selector":"#BookText",
+"navigation_selector":"a:contains('回目录')",
+"navigation_selector_pre":"a:contains('上一章')",
+"navigation_selector_next":"a:contains('下一章')",
+"title_reg":"(.*?)_(.*?)_.*",
+"title_location":"1",
+"content_patch":"",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"INDEX",
+"updateDiv":".stats a:first",
+"type":"customize",
+"post":"0",
 "patch":""}]
