增加配置网站： 去读读

--- a/configs/BookSiteConfigs.json
+++ b/configs/BookSiteConfigs.json
@@ -324,8 +324,8 @@ fakeStub.find('a:contains(\\\"下一节\\\")').attr('href'));fakeStub.find('#con
 "navigation_selector_next":"a:contains('下一章')",
 "title_reg":"(.*?)-(.*)",
 "title_location":"0",
-"content_patch":"fakeStub.find('title').html(fakeStub.find('.shuming a:first').text() + '-' + fakeStub.find('h1').text());fakeStub.find('#contentbox').find('div').remove();fakeStub.find('#contentbox').html(fakeStub.find('#contentbox').html().replace(/(..看书\\(.*?\\))/,
-''));",
+"content_patch":"fakeStub.find('title').html(fakeStub.find('.shuming a:first').text() + '-' + fakeStub.find('h1').text());fakeStub.find('#contentbox').find('div').remove();fakeStub.find('#contentbox').html(fakeStub.find('#contentbox').html().replace(/[‘](.)[’]/,
+'$1'));",
 "update_patch":"",
 "enable":"true",
 "updateInfoPage":"INDEX",
@@ -344,11 +344,32 @@ fakeStub.find('a:contains(\\\"下一节\\\")').attr('href'));fakeStub.find('#con
 "navigation_selector_next":"a:contains('下一章')",
 "title_reg":"(.*?)_(.*?)_.*",
 "title_location":"1",
-"content_patch":"",
+"content_patch":"fakeStub.find('#BookText').html(fakeStub.find('#BookText').html().replace(/\\‘(.)\\’/g,
+'$1'));",
 "update_patch":"",
 "enable":"true",
 "updateInfoPage":"INDEX",
 "updateDiv":".stats a:first",
+"type":"customize",
+"post":"0",
+"patch":""},
+{
+"id":19,
+"name":"去读读",
+"address":"http://www.qududu.net",
+"url_reg":"^http://www.qududu.net/book/\\d+/\\d+/\\d+.html$",
+"content_selector":"#kui-page-read-txt",
+"navigation_selector":"a:contains('章节目录')",
+"navigation_selector_pre":"a:contains('上一章')",
+"navigation_selector_next":"a:contains('下一章')",
+"title_reg":"(.*?)-(.*?)-.*",
+"title_location":"1",
+"content_patch":"fakeStub.find('title').html(fakeStub.find('title').html().replace('正文',
+''));",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"INDEX",
+"updateDiv":"#kui-book-info a:last",
 "type":"customize",
 "post":"0",
 "patch":""}]
