新增站点配置：大书包

--- a/configs/BookSiteConfigs.json
+++ b/configs/BookSiteConfigs.json
@@ -329,7 +329,7 @@ fakeStub.find('a:contains(\\\"下一节\\\")').attr('href'));fakeStub.find('#con
 "update_patch":"",
 "enable":"true",
 "updateInfoPage":"INDEX",
-"updateDiv":".zuixin a:first",
+"updateDiv":"dl a:first",
 "type":"customize",
 "post":"0",
 "patch":""},
@@ -370,6 +370,26 @@ fakeStub.find('a:contains(\\\"下一节\\\")').attr('href'));fakeStub.find('#con
 "enable":"true",
 "updateInfoPage":"INDEX",
 "updateDiv":"#kui-book-info a:last",
+"type":"customize",
+"post":"0",
+"patch":""},
+{
+"id":20,
+"name":"大书包",
+"address":"http://www.dashubao.co",
+"url_reg":"^http://www.dashubao.co/book/\\d+/\\d+/\\d+.html$",
+"content_selector":".yd_text2",
+"navigation_selector":"a:contains('目录')",
+"navigation_selector_pre":"a:contains('上一章')",
+"navigation_selector_next":"a:contains('下一章')",
+"title_reg":"(.*?)_(.*?)_.*",
+"title_location":"1",
+"content_patch":"fakeStub.find('.yd_text2').html(fakeStub.find('.yd_text2').html().replace(/如果您发现章节内容错误.*/,
+''));",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"INDEX",
+"updateDiv":"section.ml_main a:last",
 "type":"customize",
 "post":"0",
 "patch":""}]
