新增站点配置：笔趣库、神马小说

--- a/configs/BookSiteConfigs.json
+++ b/configs/BookSiteConfigs.json
@@ -1,5 +1,43 @@
 ﻿[{
-"id":1,
+"id":5,
+"name":"吾读网",
+"address":"http://www.66721.com",
+"url_reg":"",
+"content_selector":"",
+"navigation_selector":"",
+"navigation_selector_pre":"",
+"navigation_selector_next":"",
+"title_reg":"",
+"title_location":"0",
+"content_patch":"",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"",
+"updateDiv":"",
+"type":"customize",
+"post":"0",
+"patch":""},
+{
+"id":6,
+"name":"吾读网",
+"address":"",
+"url_reg":"",
+"content_selector":"",
+"navigation_selector":"",
+"navigation_selector_pre":"",
+"navigation_selector_next":"",
+"title_reg":"",
+"title_location":"0",
+"content_patch":"",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"",
+"updateDiv":"",
+"type":"customize",
+"post":"0",
+"patch":""},
+{
+"id":7,
 "name":"内置站点占位符OFFICIAL",
 "address":"",
 "url_reg":"",
@@ -18,7 +56,7 @@
 "post":"",
 "patch":""},
 {
-"id":2,
+"id":8,
 "name":"内置站点占位符CUSTOMIZE",
 "address":"",
 "url_reg":"",
@@ -37,7 +75,7 @@
 "post":"",
 "patch":""},
 {
-"id":3,
+"id":9,
 "name":"POPO原创市集",
 "address":"http://www.popo.tw",
 "url_reg":"http://www.popo.tw/books/\\d+/\\S+/\\d+",
@@ -57,7 +95,7 @@
 "post":"0",
 "patch":""},
 {
-"id":4,
+"id":10,
 "name":"派小说",
 "address":"http://paitxt.com",
 "url_reg":"^http://paitxt.com/\\d+/\\d+/\\d+.html$",
@@ -77,7 +115,7 @@
 "post":"0",
 "patch":""},
 {
-"id":5,
+"id":11,
 "name":"人人小说",
 "address":"http://www.ppxs.net",
 "url_reg":"^http://www.ppxs.net/\\d+/\\d+/\\d+.html$",
@@ -96,7 +134,7 @@
 "post":"0",
 "patch":""},
 {
-"id":6,
+"id":12,
 "name":"小说2016",
 "address":"http://www.xiaoshuo2016.com",
 "url_reg":"^http://www.xiaoshuo2016.com/files/article/html/\\d+/\\d+/\\d+.html$",
@@ -115,7 +153,7 @@
 "post":"0",
 "patch":""},
 {
-"id":7,
+"id":13,
 "name":"顶点小说",
 "address":"http://www.23wx.la",
 "url_reg":"^http://www.23wx.la/xs/\\d/\\d+/\\d+.html$",
@@ -134,7 +172,7 @@
 "post":"0",
 "patch":""},
 {
-"id":8,
+"id":14,
 "name":"看书堂",
 "address":"http://www.kanshutang.net",
 "url_reg":"^http://www.kanshutang.net/files/article/html/\\d+/\\d+/\\d+.html$",
@@ -153,7 +191,7 @@
 "post":"0",
 "patch":""},
 {
-"id":9,
+"id":15,
 "name":"零点看书",
 "address":"http://www.00ksw.com",
 "url_reg":"^http://www.00ksw.com/html/\\d+/\\d+/\\d+.html$",
@@ -173,7 +211,7 @@
 "post":"0",
 "patch":""},
 {
-"id":10,
+"id":16,
 "name":"新笔趣阁",
 "address":"http://www.ltoooo.com",
 "url_reg":"^http://www.ltoooo.com/\\S+/\\d+.html$",
@@ -193,7 +231,7 @@
 "post":"0",
 "patch":""},
 {
-"id":11,
+"id":17,
 "name":"飘天文学",
 "address":"http://www.piaotian.net",
 "url_reg":"^http://www.piaotian.net/html/\\d+/\\d+/\\d+.html$",
@@ -214,7 +252,7 @@
 "post":"1",
 "patch":""},
 {
-"id":12,
+"id":18,
 "name":"思路客小说阅读网",
 "address":"http://www.silukee.com",
 "url_reg":"^http://www.silukee.com/\\S+/\\d+.html$",
@@ -233,7 +271,7 @@
 "post":"0",
 "patch":""},
 {
-"id":13,
+"id":19,
 "name":"大文学",
 "address":"http://www.dawenxue.org",
 "url_reg":"^http://www.dawenxue.org/html/\\d+/\\d+/\\d+.html$",
@@ -255,7 +293,7 @@
 "post":"0",
 "patch":""},
 {
-"id":14,
+"id":20,
 "name":"17k小说网",
 "address":"http://www.17k.com",
 "url_reg":"^http://www.17k.com/chapter/\\d+/\\d+.html$",
@@ -275,7 +313,7 @@
 "post":"0",
 "patch":""},
 {
-"id":15,
+"id":21,
 "name":"小说阅读网",
 "address":"http://www.readnovel.com",
 "url_reg":"^http://www.readnovel.com/novel/\\d+/\\d+.html$",
@@ -294,7 +332,7 @@
 "post":"0",
 "patch":""},
 {
-"id":16,
+"id":22,
 "name":"请看小说网",
 "address":"http://www.qingkan520.com",
 "url_reg":"^http://www.qingkan520.com/book/\\S+/\\d+\\S+.html$",
@@ -314,7 +352,7 @@ fakeStub.find('a:contains(\\\"下一节\\\")').attr('href'));fakeStub.find('#con
 "post":"0",
 "patch":""},
 {
-"id":17,
+"id":23,
 "name":"UU看书",
 "address":"http://www.uukanshu.com",
 "url_reg":"^http://www.uukanshu.com/b/\\d+/\\d+.html$",
@@ -334,7 +372,7 @@ fakeStub.find('a:contains(\\\"下一节\\\")').attr('href'));fakeStub.find('#con
 "post":"0",
 "patch":""},
 {
-"id":18,
+"id":24,
 "name":"uu小说",
 "address":"http://www.uuxs.net",
 "url_reg":"^http://www.uuxs.net/book/\\d+/\\d+/\\d+.html$",
@@ -354,7 +392,7 @@ fakeStub.find('a:contains(\\\"下一节\\\")').attr('href'));fakeStub.find('#con
 "post":"0",
 "patch":""},
 {
-"id":19,
+"id":25,
 "name":"去读读",
 "address":"http://www.qududu.net",
 "url_reg":"^http://www.qududu.net/book/\\d+/\\d+/\\d+.html$",
@@ -374,7 +412,7 @@ fakeStub.find('a:contains(\\\"下一节\\\")').attr('href'));fakeStub.find('#con
 "post":"0",
 "patch":""},
 {
-"id":20,
+"id":26,
 "name":"大书包",
 "address":"http://www.dashubao.co",
 "url_reg":"^http://www.dashubao.co/book/\\d+/\\d+/\\d+.html$",
@@ -390,6 +428,57 @@ fakeStub.find('a:contains(\\\"下一节\\\")').attr('href'));fakeStub.find('#con
 "enable":"true",
 "updateInfoPage":"INDEX",
 "updateDiv":"section.ml_main a:last",
+"type":"customize",
+"post":"0",
+"patch":""},
+{
+"id":27,
+"name":"笔趣库",
+"address":"http://www.biquku.com",
+"url_reg":"^http://www.biquku.com/\\S+/\\d+.html$",
+"content_selector":"#content",
+"navigation_selector":"a:contains('章节目录')",
+"navigation_selector_pre":"a:contains('上一章')",
+"navigation_selector_next":"a:contains('下一章')",
+"title_reg":"(.*?)_(.*?)_.*",
+"title_location":"1",
+"content_patch":"fakeStub.find('#content').html(fakeStub.find('#content').html().replace(/天翼网.*?<br>/,
+'').replace(/\\[笔趣库.*/,
+'').replace('lala （\\”， Ｗ',
+'').replace(/jie.*看书神器.*?\\”/,
+'').replace('==“/”“ ”或者“”， 。/',
+'').replace('“ ”或者“”， 。/',
+'').replace('（”， Ｗ,
+,
+,
+,
+',
+''));",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"INDEX",
+"updateDiv":"#info > p:nth-child(5) > a",
+"type":"customize",
+"post":"0",
+"patch":""},
+{
+"id":28,
+"name":"神马小说",
+"address":"http://www.shenmabook.com",
+"url_reg":"^http://www.shenmabook.com/ml-\\d+-\\d+/$",
+"content_selector":"#htmlContent",
+"navigation_selector":"a:contains('本书目录')",
+"navigation_selector_pre":"a:contains('上一章')",
+"navigation_selector_next":"a:contains('下一章')",
+"title_reg":"(.*?)-(.*?)-.*",
+"title_location":"1",
+"content_patch":"fakeStub.find('title').html(fakeStub.find('title').html().replace('(TXT全文字手打)',
+''));fakeStub.find('#htmlContent div').remove();fakeStub.find('#htmlContent').html(fakeStub.find('#htmlContent').html().replace(/更多手打.*/,
+''));",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"INDEX",
+"updateDiv":"div.zjlist4 a:last",
 "type":"customize",
 "post":"0",
 "patch":""}]
