新增站点配置：笔趣阁

--- a/configs/BookSiteConfigs.json
+++ b/configs/BookSiteConfigs.json
@@ -573,4 +573,24 @@ br:odd').remove();fakeStub.find('#txt').html(fakeStub.find('#txt').html().replac
 "updateDiv":".chapter a:first",
 "type":"customize",
 "post":"0",
+"patch":""},
+{
+"id":29,
+"name":"笔趣阁",
+"address":"http://www.biquge.la",
+"url_reg":"^http://www.biquge.la/book/\\d+/\\d+.html$",
+"content_selector":"div#content",
+"navigation_selector":"a:contains('章节列表')",
+"navigation_selector_pre":"a:contains('上一章')",
+"navigation_selector_next":"a:contains('下一章')",
+"title_reg":"(.*?)-(.*)",
+"title_location":"0",
+"content_patch":"fakeStub.find('title').html(fakeStub.find('.con_top a:last').text() + '-' + fakeStub.find('.bookname h1').text());fakeStub.find('div#content').find('xscript,
+br:odd').remove();",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"",
+"updateDiv":"",
+"type":"customize",
+"post":"0",
 "patch":""}]
