新增站点配置：书林文学

--- a/configs/BookSiteConfigs.json
+++ b/configs/BookSiteConfigs.json
@@ -593,4 +593,23 @@ br:odd').remove();",
 "updateDiv":"",
 "type":"customize",
 "post":"0",
+"patch":""},
+{
+"id":30,
+"name":"书林文学",
+"address":"http://www.shu008.com",
+"url_reg":"^http://www.shu008.com/shu/\\d+/\\d+/\\d+.html$",
+"content_selector":"#htmlContent",
+"navigation_selector":"a:contains('返回目录')",
+"navigation_selector_pre":"a:contains('上一章')",
+"navigation_selector_next":"a:contains('下一章')",
+"title_reg":"(.*?)-(.*?)-.*",
+"title_location":"0",
+"content_patch":"",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"INDEX",
+"updateDiv":".ocon a:last",
+"type":"customize",
+"post":"0",
 "patch":""}]
