修改"顶点小说-com"阅读页匹配规则

--- a/configs/BookSiteConfigs.json
+++ b/configs/BookSiteConfigs.json
@@ -178,7 +178,7 @@ font').remove();fakeStub.find('div.bottem').find('a:eq(2)').html('回目录');",
 "id":10,
 "name":"顶点小说-com",
 "address":"http://www.23wx.com",
-"url_reg":"^http://www.23wx.com/html/.\\d+/\\d+/\\d+.html$",
+"url_reg":"^http://www.23wx.com/html/\\d+/\\d+/\\d+.html$",
 "content_selector":"#contents",
 "navigation_selector":"a:contains('返回章节列表')",
 "navigation_selector_pre":"a:contains('上一页')",
