新增站点配置：易读

--- a/configs/BookSiteConfigs.json
+++ b/configs/BookSiteConfigs.json
@@ -612,4 +612,23 @@ br:odd').remove();",
 "updateDiv":".ocon a:last",
 "type":"customize",
 "post":"0",
+"patch":""},
+{
+"id":31,
+"name":"易读",
+"address":"http://www.yi-see.com",
+"url_reg":"^http://www.yi-see.com/read_\\d+_\\d+.html$",
+"content_selector":".ART",
+"navigation_selector":"a:contains('目录')",
+"navigation_selector_pre":"a:contains('上一节')",
+"navigation_selector_next":"a:contains('下一节')",
+"title_reg":"《(.*)》 (.*?) 易读",
+"title_location":"0",
+"content_patch":"",
+"update_patch":"",
+"enable":"true",
+"updateInfoPage":"",
+"updateDiv":"",
+"type":"customize",
+"post":"0",
 "patch":""}]
